# AllegroFilamentAssistant

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
src/filament_assistant/: config.py  main.py
src/filament_assistant/cli/: smoke_test.py
src/filament_assistant/core/: cache.py
src/filament_assistant/core/allegro/: auth.py  categories.py  client.py  color_match.py  models.py
src/filament_assistant/core/color/: dominant.py  matching.py  pipeline.py  segmentation.py
src/filament_assistant/core/search/: history.py
src/filament_assistant/ui/: app.py
tests/: conftest.py
tests/core/allegro/: test_auth.py  test_categories.py
tests/core/color/: test_dominant.py  test_matching.py  test_pipeline.py
tests/ui/: conftest.py  test_app.py
