[project]
name = "filament-assistant"
version = "0.1.0"
description = "Find Allegro filaments by color"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "diskcache>=5.6",
    # Color pipeline
    "rembg>=2.0.50",
    "onnxruntime>=1.16",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "colour-science>=0.4",
    "pillow>=10.0",
]

[project.scripts]
filament-assistant = "filament_assistant.main:main"
allegro-smoke-test = "filament_assistant.cli.smoke_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filament_assistant"]

[tool.uv]
# rembg → pymatting → numba: old numba caps at Python <3.10; 0.60+ supports 3.11+
override-dependencies = ["numba>=0.60.0"]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "pytest-playwright>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
